force-app/main/default/objects/Funding_Program__c/fields/Available_Amount__c.field-meta.xml
<CustomField>
    <fullName>Available_Amount__c</fullName>
    <description>Total cash available in the program. Takes the total program amount and subtracts the amount disbursed and the amount to be disbursed.</description>
    <formula>Total_Program_Amount__c - Disbursed_Total__c - Pending_Disbursement_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>