force-app/main/default/objects/Funding_Program__c/fields/Awarded_Total__c.field-meta.xml
<CustomField>
    <fullName>Awarded_Total__c</fullName>
    <label>Awarded Total</label>
    <summarizedField>Funding_Request__c.Awarded_Amount__c</summarizedField>
    <summaryForeignKey>Funding_Request__c.Funding_Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>