force-app/main/default/objects/Funding_Program__c/fields/Disbursed_Total__c.field-meta.xml
<CustomField>
    <fullName>Disbursed_Total__c</fullName>
    <label>Disbursed Total</label>
    <summarizedField>Funding_Request__c.Total_Disbursed__c</summarizedField>
    <summaryForeignKey>Funding_Request__c.Funding_Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>