force-app/main/default/objects/Funding_Program__c/fields/Parent_Funding_Program__c.field-meta.xml
<CustomField>
    <fullName>Parent_Funding_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to create a hierarchy of Funding Programs.</description>
    <label>Parent Funding Program</label>
    <referenceTo>Funding_Program__c</referenceTo>
    <relationshipLabel>Subordinate Funding Programs</relationshipLabel>
    <relationshipName>Funding_Programs</relationshipName>
    <type>Lookup</type>
</CustomField>