force-app/main/default/objects/Funding_Program__c/fields/Pending_Disbursement_Total__c.field-meta.xml
<CustomField>
    <fullName>Pending_Disbursement_Total__c</fullName>
    <label>Pending Disbursement Total</label>
    <summarizedField>Funding_Request__c.Total_Remaining__c</summarizedField>
    <summaryForeignKey>Funding_Request__c.Funding_Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>