force-app/main/default/objects/Funding_Program__c/fields/Requested_Total__c.field-meta.xml
<CustomField>
    <fullName>Requested_Total__c</fullName>
    <label>Requested Total</label>
    <summarizedField>Funding_Request__c.Requested_Amount__c</summarizedField>
    <summaryForeignKey>Funding_Request__c.Funding_Program__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>