force-app/main/default/objects/Funding_Program__c/fields/Top_Level__c.field-meta.xml
<CustomField>
    <fullName>Top_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates Top Level in Hierarchy</description>
    <inlineHelpText>Check if this Funding Program is the top level in a program hierarchy.</inlineHelpText>
    <label>Top Level</label>
    <type>Checkbox</type>
</CustomField>