force-app/main/default/objects/Funding_Program__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Funding_Program_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Program_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>