force-app/main/default/objects/Funding_Program__c/listViews/Open_Funding_Programs.listView-meta.xml
<ListView>
    <fullName>Open_Funding_Programs</fullName>
    <columns>NAME</columns>
    <columns>Funding_Program_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Program_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In progress</value>
    </filters>
    <label>Open Funding Programs</label>
</ListView>