force-app/main/default/objects/Funding_Program__c/listViews/Top_Level_Funding_Programs.listView-meta.xml
<ListView>
    <fullName>Top_Level_Funding_Programs</fullName>
    <columns>NAME</columns>
    <columns>Funding_Program_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Total_Program_Amount__c</columns>
    <columns>Available_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Top_Level__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Top Level Funding Programs</label>
</ListView>